@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.powermock</groupId>
     <artifactId>powermock-easymock-release-full</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <name>powermock-easymock-single-jar-release-full</name>
 
     <description>
@@ -143,21 +143,22 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>powermock-easymock-${project.version}</finalName>
                     <descriptors>
                         <descriptor>src/assembly/full.xml</descriptor>
                     </descriptors>
-                </configuration>
+					<finalName>classes</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+				</configuration>
                 <executions>
                     <execution>
                         <id>make-assembly</id>
-                        <phase>package</phase>
+                        <phase>process-resources</phase>
                         <goals>
                             <goal>attached</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
+		</plugins>
     </build>
 </project>
